--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,1 @@
-<app-favorite [isSelected]="post.isFavorite"></app-favorite>
+<app-favorite [isSelected]="post.isFavorite" (change)="onFavoriteChanged($event)"></app-favorite>
