--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,10 @@
-<app-favorite [isSelected]="post.isFavorite" (change)="onFavoriteChanged($event)"></app-favorite>
+
+<bootstrap-panel>
+    <h1 class="heading">Heading from app Component</h1>
+    <div class="body">
+        <h1>Body goes here....</h1>
+        <p>Content goes  here .......</p>
+    </div>
+    <h1 class="values">Rendering values at run time</h1>
+</bootstrap-panel>
+
